--- a/reactapp/my-app/package.json
+++ b/reactapp/my-app/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "react-router-dom": "5.2.0"
+    "react-select-search": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
